packages/styles/src/components/form-check.scss
@forward './../variables/options';

@use '../variables/color';
@use '../variables/type';
@use '../variables/spacing';
@use '../variables/animation';
@use '../variables/components/form-check';
@use '../mixins/icons' as icons-mx;
@use '../mixins/utilities' as utility-mx;

.form-check {
  display: flex;
  flex-wrap: wrap;
  row-gap: form-check.$form-check-row-gap;
  margin-bottom: form-check.$form-check-margin-bottom;

  @include utility-mx.focus-style();

  &-inline {
    display: inline-flex;
  }

  &-inline:not(:last-of-type) {
    margin-right: form-check.$form-check-inline-margin-right;
  }

  &-input,
  &-label {
    color: rgba(var(--post-contrast-color-rgb), 0.8);
    transition: color animation.$transition-base-timing;

    &:hover:not([disabled]),
    &:hover:not([disabled]) ~ &-label {
      color: var(--post-contrast-color);
    }
  }

  &-input {
    &:not([disabled]),
    &:not([disabled]) ~ .form-check-label {
      cursor: pointer;
    }

    @include utility-mx.focus-style-none();
    display: inline-flex;
    flex: 0 auto;
    appearance: none;
    background: color.$white;
    height: form-check.$form-check-input-size;
    width: form-check.$form-check-input-size;
    border: form-check.$form-check-input-border-width solid
      rgba(var(--post-contrast-color-rgb), 0.8);

    @include utility-mx.high-contrast-mode {
      border-color: FieldText; // For blink-browser as otherwise the default color (which is not a full color) will be converted to Highlight
    }

    @include utility-mx.high-contrast-mode() {
      &:not(:disabled) {
        &:hover {
          border-color: Highlight;
        }
      }
    }

    &::after {
      content: '';
      display: block;
      flex: 1;
    }

    &:checked,
    &:indeterminate {
      color: var(--post-contrast-color);
      border-color: var(--post-contrast-color);

      ~ .form-check-label {
        color: var(--post-contrast-color);
      }
    }

    &[type='checkbox'] {
      &:checked::after {
        @include icons-mx.icon(3035);
      }

      &:indeterminate::after {
        @include icons-mx.icon(2039);
      }

      &:checked,
      &:indeterminate {
        @include utility-mx.high-contrast-mode {
          background-color: SelectedItem !important;
          color: SelectedItemText !important; // Important is needed for card-control
        }
      }
    }

    &[disabled] {
      &[type='checkbox'],
      &[type='radio'] {
        border-color: GrayText !important;
      }

      &[type='checkbox'] {
        &:checked,
        &:indeterminate {
          @include utility-mx.high-contrast-mode {
            background-color: Field !important;
            color: GrayText !important;
          }
        }
      }

      &[type='radio'] {
        &:checked::after {
          @include utility-mx.high-contrast-mode {
            background-color: GrayText;
          }
        }
      }
    }

    &[type='radio'] {
      border-radius: 50%;

      &:checked::after {
        border: spacing.$size-micro solid transparent;
        background-color: currentColor;
        border-radius: inherit;
        background-clip: padding-box;

        @include utility-mx.high-contrast-mode {
          background-color: SelectedItem;
          border-color: Canvas;
        }
      }
    }

    &[disabled],
    &[disabled] ~ .form-check-label {
      border-color: rgba(var(--post-contrast-color-rgb), 0.4) !important;
      color: rgba(var(--post-contrast-color-rgb), 0.4) !important;
    }

    .form-check-sm & {
      height: form-check.$form-check-input-size-sm;
      width: form-check.$form-check-input-size-sm;

      &[type='radio'] {
        &:checked::after {
          border-width: spacing.$size-line;
        }
      }
    }
  }

  &-label {
    flex: 1;

    :not(.form-switch, .radio-button-card, .checkbox-button-card) > & {
      padding-inline-start: form-check.$form-check-column-gap;
    }

    .form-check-sm & {
      font-size: type.$font-size-12;
    }
  }
}

.form-switch {
  .form-check-input {
    height: form-check.$form-switch-height;
    width: form-check.$form-switch-width;
    border: 0;
    border-radius: form-check.$form-switch-width;
    background-image: form-check.$form-switch-background-image;
    background-size: 2 * form-check.$form-switch-width;
    background-position-x: 0;
    transition:
      background-color animation.$transition-base-timing,
      background-position animation.$transition-base-timing;

    &::after {
      max-width: form-check.$form-switch-height;
      background-color: form-check.$form-switch-color;
      border: form-check.$form-check-input-border-width solid form-check.$form-switch-border-color;
      border-radius: 50%;
      transition: transform animation.$transition-base-timing;
    }

    &:checked {
      background-position-x: form-check.$form-switch-width;

      &::after {
        @include icons-mx.remove-icon;
        background-color: form-check.$form-switch-color;
        border-color: form-check.$form-switch-checked-border-color;
        transform: translateX(2rem);
      }
    }

    @include utility-mx.high-contrast-mode {
      transition: none;
      border: form-check.$form-check-input-border-width solid CanvasText;

      &:checked {
        background-color: SelectedItem !important;
      }

      &::after,
      &:checked::after {
        max-width: calc(
          #{form-check.$form-switch-height} - #{2 * form-check.$form-check-input-border-width}
        );
        border-color: Canvas;
        background-color: CanvasText;
      }
    }

    &[disabled] {
      background: form-check.$form-switch-disabled-bg;

      &::after {
        border-color: form-check.$form-switch-disabled-border-color;
      }

      @include utility-mx.high-contrast-mode {
        &::after {
          border-color: Field;
        }

        &:checked {
          background-color: GrayText !important;
        }
      }
    }
  }

  &:hover > .form-check-input:not([disabled]) {
    background-color: rgba(var(--post-contrast-color-rgb), 0.1);

    @include utility-mx.high-contrast-mode {
      border-color: Highlight;
    }
  }

  .form-check-label {
    padding-top: form-check.$form-switch-label-padding-top;

    &.order-first {
      flex: 0 auto;
      padding-inline-end: form-check.$form-switch-column-gap;
    }

    &:not(.order-first) {
      padding-inline-start: form-check.$form-switch-column-gap;
    }
  }
}

